apps/mimir-chat/overlays/staging/mimir-chat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-chat-web
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: mimir.contextsuite.dev
      http:
        paths:
          - backend:
              service:
                name: mimir-chat-web
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mimir.contextsuite.dev
      secretName: mimir-contextsuite-com-tls
